--- a/index.html
+++ b/index.html
@@ -1,11 +1,86 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <title>Mutiara Rizki Anti - Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mutiara Rizki Anti | Portfolio</title>
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    body {
+      background: linear-gradient(135deg, #1e3c72, #2a5298);
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+    }
+
+    .card {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 40px;
+      border-radius: 20px;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 15px 35px rgba(0,0,0,0.3);
+      max-width: 500px;
+      width: 90%;
+      transition: 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-10px);
+    }
+
+    h1 {
+      font-size: 32px;
+      margin-bottom: 10px;
+    }
+
+    h2 {
+      font-weight: 400;
+      margin-bottom: 20px;
+      opacity: 0.9;
+    }
+
+    p {
+      margin-bottom: 25px;
+      opacity: 0.85;
+    }
+
+    .btn {
+      display: inline-block;
+      padding: 12px 25px;
+      border-radius: 30px;
+      text-decoration: none;
+      background: white;
+      color: #2a5298;
+      font-weight: bold;
+      transition: 0.3s ease;
+    }
+
+    .btn:hover {
+      background: #ffcc70;
+      color: black;
+    }
+  </style>
 </head>
+
 <body>
-  <h1>Halo, Saya Mutiara 👋</h1>
-  <p>Web Developer | Designer | Programmer</p>
-  <p>Ini adalah portfolio saya menggunakan GitHub Pages.</p>
+  <div class="card">
+    <h1>Halo, Saya Mutiara 👋</h1>
+    <h2>Web Developer • Designer • Programmer</h2>
+    <p>
+      Saya sedang membangun portfolio digital saya menggunakan GitHub Pages.
+      Website ini adalah langkah awal menuju personal branding profesional.
+    </p>
+    <a href="#" class="btn">Lihat Project Saya</a>
+  </div>
 </body>
 </html>
